# ai-analyst

./: .gitignore  pyproject.toml
agents/: agent.py  requirements.txt
agents/database/business_metrics/: data.csv  description.md  generate.py  metrics.yaml
agents/database/volume_forecasts/: data.csv  description.md  generate.py  structure.yaml
agents/sub_agents/: __init__.py  business_metrics.py  volume_forecasts.py
agents/tools/: __init__.py  simulation.py  visualisation.py
